Cleaning up code, adding debug module.
Signed-off-by: Kevin Swiber <kswiber@gmail.com>

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "MIT",
   "dependencies": {
     "aws-sdk": "^2.327.0",
+    "debug": "^4.1.0",
     "file-type": "^10.0.0",
     "raw-body": "^2.3.3"
   },
