Passing plugin settings to policy params.
Signed-off-by: Kevin Swiber <kswiber@gmail.com>

--- a/test/fixtures/basic/config/system.config.yml
+++ b/test/fixtures/basic/config/system.config.yml
@@ -3,7 +3,6 @@ db:
   redis:
     emulate: true
     namespace: EG
-
 crypto:
   cipherKey: sensitiveKey
   algorithm: aes256
@@ -25,3 +24,4 @@ plugins:
  express-gateway-plugin-lambda:
    # package: '../../'
    package: '../../../'
+   unhandledStatus: 503
