--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "mocha -R spec test"
   },
   "author": "Kevin Swiber <kswiber@gmail.com>",
-  "license": "MIT",
+  "license": "Apache-2.0",
   "dependencies": {
     "aws-sdk": "^2.327.0",
     "debug": "^4.1.0",
