Updating description and keywords in package.json.
Signed-off-by: Kevin Swiber <kswiber@gmail.com>

--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "express-gateway-plugin-lambda",
-  "version": "1.0.0",
-  "description": "",
+  "version": "1.0.0-alpha",
+  "description": "Proxy to AWS Lambda functions with Express Gateway.",
   "main": "manifest.js",
   "scripts": {
     "test": "mocha -R spec test"
   },
   "author": "Kevin Swiber <kswiber@gmail.com>",
   "license": "Apache-2.0",
+  "keywords": "api, gateway, plugin, aws, lambda, function",
   "dependencies": {
     "aws-sdk": "^2.327.0",
     "debug": "^4.1.0",
