Cleaning up tests and upgrading to EG 1.13.0.
Signed-off-by: Kevin Swiber <kswiber@gmail.com>

--- a/test/fixtures/custom-context/config/gateway.config.yml
+++ b/test/fixtures/custom-context/config/gateway.config.yml
@@ -18,5 +18,5 @@ pipelines:
             jscode: 'req.egContext.lambda = { hello: "expression" }'
       - lambda-proxy:
         - action:
-            functionName: 'httpExample'
+            functionName: 'customExample'
             useCustomIntegration: true
