feat: semantic-release

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "express-gateway-plugin-lambda",
-  "version": "1.0.0",
+  "version": "0.0.0",
   "description": "Proxy to AWS Lambda functions with Express Gateway.",
   "main": "manifest.js",
   "scripts": {
@@ -21,6 +21,7 @@
     "aws-sdk-mock": "^4.3.1",
     "axios": "^0.18.0",
     "express-gateway": "^1.15.0",
-    "mocha": "^6.0.2"
+    "mocha": "^6.0.2",
+    "semantic-release": "^15.13.3"
   }
 }
